--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,6 +1,24 @@
 body {
+  font-family: Verdana, sans-serif;
+  text-align: center;
   background-color: black;
+  color: white;
 }
 h1 {
-  color: white;
+  font-size: 50px;
+}
+h2 {
+  font-weight: 300;
+  font-size: 42px;
+}
+p {
+  font-size: 21px;
+  color: gray;
+}
+.cta {
+  color: aquamarine;
+  font-size: 16px;
+}
+.footer {
+  text-align: right;
 }
